Added fucking transform-transition in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,22 +81,24 @@
 
           <!--cards-->
           <ul class="portfolio">
-            <li class="item">
-              <a href="#">
-                <img
-                  src="./images/technokryak.jpg"
-                  alt="Технокряк веб сайт"
-                  width="370"
-                  class="example"
-                />
+            <li class="item portfolio-item">
+              <a href="#" class="link-portfolio">
+                <div class="example-card">
+                  <img
+                    src="./images/technokryak.jpg"
+                    alt="Технокряк веб сайт"
+                    width="370"
+                    class="example"
+                  />
+                  <p class="portfolio-description card-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-group">Веб-сайт</p>
-                  <!-- <p class="portfolio-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
                 </div>
               </a>
             </li>
