--- a/portfolio.html
+++ b/portfolio.html
@@ -102,157 +102,173 @@
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
-                <img
-                  src="./images/posterNewOrlean.jpg"
-                  alt="Постер"
-                  width="370"
-                  class="example"
-                />
+            <li class="item portfolio-item">
+              <a href="#" class="link-portfolio">
+                <div class="example-card">
+                  <img
+                    src="./images/posterNewOrlean.jpg"
+                    alt="Постер"
+                    width="370"
+                    class="example"
+                  />
+                  <p class="portfolio-description card-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">
                     Постер New Orlean vs Golden Star
                   </h2>
                   <p class="portfolio-group">Дизайн</p>
-                  <!-- <p class="portfolio-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
-                <img
-                  src="./images/restaurant.jpg"
-                  alt="Приложение для ресторана"
-                  width="370"
-                  class="example"
-                />
+            <li class="item portfolio-item">
+              <a href="#" class="link-portfolio">
+                <div class="example-card">
+                  <img
+                    src="./images/restaurant.jpg"
+                    alt="Приложение для ресторана"
+                    width="370"
+                    class="example"
+                  />
+                  <p class="portfolio-description card-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-group">Приложение</p>
-                  <!-- <p class="portfolio-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
-                <img
-                  src="./images/projectPrime.jpg"
-                  alt="Маркетинговый проект"
-                  width="370"
-                  class="example"
-                />
+            <li class="item portfolio-item">
+              <a href="#" class="link-portfolio">
+                <div class="example-card">
+                  <img
+                    src="./images/projectPrime.jpg"
+                    alt="Маркетинговый проект"
+                    width="370"
+                    class="example"
+                  />
+                  <p class="portfolio-description card-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Проект Prime</h2>
                   <p class="portfolio-group">Маркетинг</p>
-                  <!-- <p class="portfolio-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
-                <img
-                  src="./images/projectBoxes.jpg"
-                  alt="Приложение Коробка"
-                  width="370"
-                  class="example"
-                />
+            <li class="item portfolio-item">
+              <a href="#" class="link-portfolio">
+                <div class="example-card">
+                  <img
+                    src="./images/projectBoxes.jpg"
+                    alt="Приложение Коробка"
+                    width="370"
+                    class="example"
+                  />
+                  <p class="portfolio-description card-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Проект Boxes</h2>
                   <p class="portfolio-group">Приложение</p>
-                  <!-- <p class="portfolio-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
-                <img
-                  src="./images/InspirationHasNoBorders.jpg"
-                  alt="Веб сайт про вдохновение"
-                  width="370"
-                  class="example"
-                />
+            <li class="item portfolio-item">
+              <a href="#" class="link-portfolio">
+                <div class="example-card">
+                  <img
+                    src="./images/InspirationHasNoBorders.jpg"
+                    alt="Веб сайт про вдохновение"
+                    width="370"
+                    class="example"
+                  />
+                  <p class="portfolio-description card-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-group">Веб-сайт</p>
-                  <!-- <p class="portfolio-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
-                <img
-                  src="./images/EditionLimitedEdition.jpg"
-                  alt="Дизайн"
-                  width="370"
-                  class="example"
-                />
+            <li class="item portfolio-item">
+              <a href="#" class="link-portfolio">
+                <div div class="example-card">
+                  <img
+                    src="./images/EditionLimitedEdition.jpg"
+                    alt="Дизайн"
+                    width="370"
+                    class="example"
+                  />
+                  <p class="portfolio-description card-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Издание Limited Edition</h2>
                   <p class="portfolio-group">Дизайн</p>
-                  <!-- <p class="portfolio-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
-                <img
-                  src="./images/projectLab.jpg"
-                  alt="Маркетинг проекта Лаб"
-                  width="370"
-                  class="example"
-                />
+            <li class="item portfolio-item">
+              <a href="#" class="link-portfolio">
+                <div class="example-card">
+                  <img
+                    src="./images/projectLab.jpg"
+                    alt="Маркетинг проекта Лаб"
+                    width="370"
+                    class="example"
+                  />
+                  <p class="portfolio-description card-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Проект LAB</h2>
                   <p class="portfolio-group">Маркетинг</p>
-                  <!-- <p class="portfolio-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
                 </div>
               </a>
             </li>
-            <li class="item">
-              <a href="#">
-                <img
-                  src="./images/growingBusiness.jpg"
-                  alt="Приложение про бизнес"
-                  width="370"
-                  class="example"
-                />
+            <li class="item portfolio-item">
+              <a href="#" class="link-portfolio">
+                <div class="example-card">
+                  <img
+                    src="./images/growingBusiness.jpg"
+                    alt="Приложение про бизнес"
+                    width="370"
+                    class="example"
+                  />
+                  <p class="portfolio-description card-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="discription">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-group">Приложение</p>
-                  <!-- <p class="portfolio-description">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p> -->
                 </div>
               </a>
             </li>
