--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </a>
           <ul class="site-nav">
             <li class="site-menu">
-              <a href="./index.html" class="link currant">Тест</a>
+              <a href="./index.html" class="link currant">Cтудия</a>
             </li>
             <li class="site-menu">
               <a href="./portfolio.html" class="link">Портфолио</a>
