Corrected What do we do section

--- a/index.html
+++ b/index.html
@@ -134,37 +134,43 @@
         </div>
       </section>
 
-      <!--What do we do section-->
+      <!--WHAT DO WE DO SECTION-->
       <section class="section-projects">
         <div class="conteiner">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-list">
             <li class="item">
-              <img
-                src="./images/desktopapp.jpg"
-                alt="Десктопные приложения"
-                width="370"
-                class="project-pic"
-              />
-              <!-- <h3 class="work-list-title">Десктопные приложения</h3> -->
+              <div class="project-group">
+                <img
+                  src="./images/desktopapp.jpg"
+                  alt="Десктопные приложения"
+                  width="370"
+                  class="project-pic"
+                />
+                <h3 class="work-list-title">Десктопные приложения</h3>
+              </div>
             </li>
             <li class="item">
-              <img
-                src="./images/mobileapp.jpg"
-                alt="Мобильные приложения"
-                width="370"
-                class="project-pic"
-              />
-              <!-- <h3 class="work-list-title">Мобильные приложения</h3> -->
+              <div class="project-group">
+                <img
+                  src="./images/mobileapp.jpg"
+                  alt="Мобильные приложения"
+                  width="370"
+                  class="project-pic"
+                />
+                <h3 class="work-list-title">Мобильные приложения</h3>
+              </div>
             </li>
             <li class="item">
-              <img
-                src="./images/designerapp.jpg"
-                alt="Мобильные приложения"
-                width="370"
-                class="project-pic"
-              />
-              <!-- <h3 class="work-list-title">Дизайнерские решения</h3> -->
+              <div class="project-group">
+                <img
+                  src="./images/designerapp.jpg"
+                  alt="Мобильные приложения"
+                  width="370"
+                  class="project-pic"
+                />
+                <h3 class="work-list-title">Дизайнерские решения</h3>
+              </div>
             </li>
           </ul>
         </div>
